Arrumando a referencia de perfis
