# app/models/userProfileModel.py
@@ -8,7 +8,5 @@ class UserProfile(Base):
 
     id = Column(Integer, primary_key=True, index=True, autoincrement=True)
     name = Column(String(255), nullable=False)
-    user_id = Column(Integer, ForeignKey("users.id"), nullable=True)
 
     permissions = relationship("Permissions", back_populates="profile", lazy="joined", cascade="all, delete-orphan")
-    user = relationship("User", back_populates="profiles", lazy="joined")
